src/cli/snapshots/dunspars__cli__commands__tests__run_ability.snap
---
source: src/cli/commands.rs
description: ability intimidate --game black-white
---
intimidate
When this Pokémon enters battle, the opponent's Attack is lowered by one stage.  In a double battle, both opponents are affected.

This ability also takes effect when acquired during a battle, but will not take effect again if lost and reobtained without leaving battle.

This ability has no effect on an opponent that has a substitute.

Overworld: If the first Pokémon in the party has this ability, any random encounter with a Pokémon five or more levels lower than it has a 50% chance of being skipped.
