src/cli/snapshots/dunspars__cli__commands__tests__run_match.snap
---
source: src/cli/commands.rs
description: match golem pachirisu lapras --game x-y
---
golem rock ground
hp    atk   def   satk  sdef  spd   total
80    120   130   55    65    45    495   
lapras water ice
hp    atk   def   satk  sdef  spd   total
130   85    80    85    95    60    535   

lapras's moves vs golem
quad: aqua-tail(p) brine(s) dive(p) hydro-pump(s) surf(s) water-gun(s) water-pulse(s) waterfall(p) whirlpool(s) 
double: avalanche(p) blizzard(s) bulldoze(p) drill-run(p) fissure(p) freeze-dry(s) frost-breath(s) ice-beam(s) ice-shard(p) icy-wind(s) iron-head(p) iron-tail(p) rock-smash(p) sheer-cold(s) 

golem's moves vs lapras
double: brick-break(p) focus-blast(s) focus-punch(p) power-up-punch(p) rock-blast(p) rock-slide(p) rock-smash(p) rock-throw(p) rock-tomb(p) smack-down(p) stone-edge(p) superpower(p) thunder-punch(p) 


pachirisu electric 
hp    atk   def   satk  sdef  spd   total
60    45    70    45    90    95    405   
lapras water ice
hp    atk   def   satk  sdef  spd   total
130   85    80    85    95    60    535   

lapras's moves vs pachirisu
double: bulldoze(p) drill-run(p) fissure(p) 

pachirisu's moves vs lapras
double: charge-beam(s) discharge(s) electro-ball(s) electroweb(s) grass-knot(s) nuzzle(p) rollout(p) seed-bomb(p) shock-wave(s) spark(p) thunder(s) thunder-punch(p) thunderbolt(s) volt-switch(s)
