src/cli/snapshots/dunspars__cli__commands__tests__run_match_custom.snap
---
source: src/cli/commands.rs
description: match ramza crawford --verbose --game the-indigo-disk
---
ramza grass 
hp    atk   def   satk  sdef  spd   total
125   100   80    85    75    55    520   
crawford flying water
hp    atk   def   satk  sdef  spd   total
70    85    55    85    95    85    475   

crawford's moves vs ramza
double: drill-peck(p) 
neutral: spit-up(s) 
half: surf(s) 

ramza's moves vs crawford
neutral: boomburst(s) 
half: flamethrower(s) 
zero: drill-run(p)
