src/cli/snapshots/dunspars__cli__commands__tests__run_pokemon.snap
---
source: src/cli/commands.rs
description: pokemon ceruledge --game scarlet-violet
---
ceruledge fire ghost 
flash-fire weak-armor(h)
hp    atk   def   satk  sdef  spd   total
75    125   80    60    100   85    525   
gen-9

fire ghost defense
double: dark ghost ground rock water
neutral: dragon electric flying psychic
half: fairy fire grass ice poison steel
quarter: bug
zero: fighting normal
